fix: disables tap highlight on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  -webkit-tap-highlight-color: transparent;
+  -moz-tap-highlight-color: transparent;
 }
 
 html {
